packages/platformos-mcp-supervisor/test/fixtures/broken-project/app/views/partials/errors/syntax_error.liquid
{% doc %}
  @param data {object} Data
{% enddoc %}
{% if data.valid
  <p>Valid</p>
{% endif %}
